--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
     "mongoose": "^8.5.3",
+    "multer": "^1.4.5-lts.1",
     "prettier": "^3.3.3",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
